@@ -293,9 +293,7 @@ class ConfigurationServiceTest {
     }
 
     @Test
-    void getOrchestrationToAuthenticationSigningPublicKeysShouldReturnSingleValue() {
-        var expectedKey = "expectedKey";
-        when(systemService.getenv("ORCH_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY")).thenReturn(expectedKey);
+    void shouldNotReturnOrchStubSigningKeyIfNotPresent() {
         when(systemService.getOrDefault("ORCH_STUB_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY", ""))
                 .thenReturn("");
 
@@ -304,36 +302,14 @@ class ConfigurationServiceTest {
         configurationServiceWithMockedSystemService.setSystemService(systemService);
 
         assertEquals(
-                Collections.singletonList(expectedKey),
+                List.of(),
                 configurationServiceWithMockedSystemService
                         .getOrchestrationToAuthenticationSigningPublicKeys());
     }
 
     @Test
-    void getOrchestrationToAuthenticationSigningPublicKeysShouldReturnTwoValues() {
-        var expectedKey = "expectedKey";
-        when(systemService.getenv("ORCH_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY")).thenReturn(expectedKey);
-        var secondExpectedKey = "expectedKey2";
-        when(systemService.getOrDefault("ORCH_STUB_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY", ""))
-                .thenReturn(secondExpectedKey);
-
-        ConfigurationService configurationServiceWithMockedSystemService =
-                new ConfigurationService();
-        configurationServiceWithMockedSystemService.setSystemService(systemService);
-
-        assertEquals(
-                List.of(secondExpectedKey, expectedKey),
-                configurationServiceWithMockedSystemService
-                        .getOrchestrationToAuthenticationSigningPublicKeys());
-    }
-
-    @Test
-    void shouldNotAddHardcodedPublicKeyIfUseAuthJwksIsEnabled() {
-        when(systemService.getOrDefault("USE_AUTH_JWKS", "false")).thenReturn("true");
-        var hardcodedKey = "expectedKey";
-        when(systemService.getenv("ORCH_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY"))
-                .thenReturn(hardcodedKey);
-        var stubKey = "expectedKey2";
+    void shouldReturnOrchStubSigningKeyIfPresent() {
+        var stubKey = "expectedKey";
         when(systemService.getOrDefault("ORCH_STUB_TO_AUTH_TOKEN_SIGNING_PUBLIC_KEY", ""))
                 .thenReturn(stubKey);
 
@@ -679,6 +655,11 @@ class ConfigurationServiceTest {
         assertThrows(
                 MissingEnvVariableException.class,
                 () -> configurationService.getInternationalSmsNumberSendLimit());
+    }
+
+    @Test
+    void isForcedMFAResetAfterMFACheckEnabledShouldDefaultFalse() {
+        assertFalse(configurationService.isForcedMFAResetAfterMFACheckEnabled());
     }
 
     private static Stream<Arguments> commaSeparatedStringContains() {
